# platzi_news

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: main.yml
mypy-report/: index.html
mypy-report/html/src/platzi_news/: config.py.html
mypy-report/html/src/platzi_news/analysis/: analyzer.py.html
mypy-report/html/src/platzi_news/core/: services.py.html
mypy-report/html/src/platzi_news/do_not_format/: test.py.html
mypy-report/html/src/platzi_news/io/: cli.py.html
mypy-report/html/src/platzi_news/sources/: guardian.py.html  newsapi.py.html
src/platzi_news/: config.py
src/platzi_news/analysis/: __init__.py  analyzer.py
src/platzi_news/core/: __init__.py  exceptions.py  models.py  services.py
src/platzi_news/io/: __init__.py  cli.py  display.py
src/platzi_news/sources/: __init__.py  guardian.py  newsapi.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_config.py  test_display.py  test_exceptions.py  test_models.py  test_news_sources.py
